added test scripts

--- a/public/test-assets/index.html
+++ b/public/test-assets/index.html
@@ -6,5 +6,5 @@
   <body>
     <h1>This is the first test page</h1>
   </body>
-  <scripts></scripts>
+  <script src="js/index.js"></script>
 </html>
