added ipc message support + multiple code refactoring

--- a/public/index.html
+++ b/public/index.html
@@ -12,23 +12,27 @@
         style="border: 1px solid black; margin-right: 5px"
       >
         <div style="margin: 20px">
-          <input type="text" />
-          <button type="button">Register User</button>
+          <input id="username-input" type="text" />
+          <button id="register-user-button" type="button">Register User</button>
         </div>
 
         <div style="margin: 20px">
-          <input type="text" />
-          <button type="button">Register In Group</button>
+          <input id="group-input" type="text" />
+          <button id="register-group-button" type="button">
+            Register In Group
+          </button>
         </div>
 
         <div style="margin: 20px">
-          <input type="text" />
-          <button type="button">Send Message</button>
+          <input id="message-input" type="text" />
+          <button id="send-message-button" type="button">Send Message</button>
         </div>
 
-        <div id="selected-group-div" style="margin: 20px"></div>
+        <div id="username" style="margin: 20px"></div>
 
-        <div id="selected-user-div" style="margin: 20px"></div>
+        <div id="selected-group" style="margin: 20px"></div>
+
+        <div id="selected-user" style="margin: 20px"></div>
 
         <div id="online-users" style="margin: 20px"></div>
       </div>
