user registration flow completed

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,18 @@
         </div>
 
         <div style="margin: 20px">
+          <button id="de-register-user-button" type="button">De-Register User</button>
+        </div>
+
+        <div style="margin: 20px">
           <input id="group-input" type="text" />
           <button id="register-group-button" type="button">
             Register In Group
           </button>
+        </div>
+
+        <div style="margin: 20px">
+          <button id="de-register-group-button" type="button">De-Register From Group</button>
         </div>
 
         <div style="margin: 20px">
